--- a/src/app/components/add-transition/add-transition.component.html
+++ b/src/app/components/add-transition/add-transition.component.html
@@ -3,6 +3,7 @@
 <div
   #statu
   cdkDrag
+  class="card"
   [id]="statu.id"
   *ngFor="let statu of status; let i = index"
   [style.background]="statu.bgColor"
