--- a/src/app/components/add-status/status-dialog.html
+++ b/src/app/components/add-status/status-dialog.html
@@ -4,6 +4,7 @@
     <input
       type="number"
       matInput
+      placeholder="Px cinsinden Genişlik"
       [(ngModel)]="data.width"
       required /></mat-form-field
   ><br />
@@ -12,6 +13,7 @@
     <input
       type="number"
       matInput
+      placeholder="Px cinsinden Yükseklik"
       [(ngModel)]="data.height"
       required
     /> </mat-form-field
@@ -21,6 +23,7 @@
     <input
       type="number"
       matInput
+      placeholder="Giriş sayısı"
       [(ngModel)]="data.input"
       required
     /> </mat-form-field
@@ -30,6 +33,7 @@
     <input
       type="number"
       matInput
+      placeholder="Çıkış sayısı"
       [(ngModel)]="data.output"
       required
     /> </mat-form-field
